css/style.css
/* ... */
/*--------------------------BANNER SECTION ENDS----------------------------------------*/


/*--------------------------SOCIALS SECTION STARTS----------------------------------------*/
#socials{
    position: fixed;
    padding: 0.1rem;
    right: 0;
    top: 35%;
    border-radius: 1rem;
    transition: background-color 0.3s;
    z-index: 99;
}
#socials a{
    color: var(--white);
    font-size: 1.2rem;
}
#socials li{
    padding: 0.5rem 0;
}
/*--------------------------SOCIALS SECTION ENDS----------------------------------------*/


/*--------------------------SUBCATEGORY SECTION STARTS----------------------------------------*/
.subCategory{
    background-color: var(--light);
}
.subCategory .cardsContainer{
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 0.5rem;
}
.subCategory .card{
    background-color: var(--white);
}
/*--------------------------SUBCATEGORY SECTION ENDS----------------------------------------*/


/*--------------------------SUPERCATEGORY SECTION STARTS----------------------------------------*/

/*--------------------------SUPERCATEGORY SECTION STARTS----------------------------------------*/


/*--------------------------FOOTER SECTION ENDS----------------------------------------*/
footer{
    background-color: var(--theme);
    color: var(--white);
    padding: 1rem 0 0.2rem 0;
}
footer a{
    color: var(--white);
    text-decoration: none;
}
footer a:hover{
    text-decoration: underline;
}
footer nav, footer div{
    margin: 1rem 0;
}
footer div.copy{
    text-align: right;
}
footer li{
    padding: 0.4rem 0;
}
footer input{
    border: none;
    padding: 0.5rem;
    width: 80%;
    margin: 1rem;
}
footer .buttons{
    margin: 0 1rem;
}
/*--------------------------FOOTER SECTION ENDS----------------------------------------*/


/*--------------------------GOUP SECTION ENDS----------------------------------------*/
#goUp{
    position: fixed;
    bottom: 1rem;
    right: 1rem;
    background-color: var(--theme);
    height: 3rem;
    width: 3rem;
    text-align: center;
    padding-top: 0.9rem;
    border-radius: 50%;
    transition: background-color 0.4s;
    box-shadow: 0 0 22px rgba(0, 0, 0, 0.3);
}
#goUp a{
    color: var(--white);
    font-size: 1.2rem;
    transition: color 0.4s;
}
/*--------------------------GOUP SECTION ENDS----------------------------------------*/


/*--------------------------ARTICLE SECTION STARTS----------------------------------------*/
article.blog h1{
    font-size: 2rem;
    padding: 0.5rem;
}
article.blog .blogImage{
    width: 100%;
    padding: 0.5rem;
}
article.blog p{
    padding: 0.5rem;
    text-align: center;
}
article.blog h2{
    padding: 0.3rem;
}
/*--------------------------ARTICLE SECTION ENDS----------------------------------------*/


/*--------------------------OVERWRITE STARTS----------------------------------------*/
.scrolled{
    background-color: var(--theme);
    color: var(--white);
}
.scrolled a{
    color: var(--white)!important;
}
.navToggler{
    transform: translateX(0)!important;
}
.show{
    display: block!important;
}   
/*--------------------------OVERWRITE ENDS----------------------------------------*/

/*--------------------------SCROLLBAR SECTION STARTS----------------------------------------*/
::-webkit-scrollbar {
    width: 10px;
}
::-webkit-scrollbar-track {
    background: var(--light);
}
::-webkit-scrollbar-thumb {
    background: var(--dark);
}
::-webkit-scrollbar-thumb:hover {
    background: var(--darker);
}
/*--------------------------SCROLLBAR SECTION STARTS----------------------------------------*/


/*--------------------------PAGINATION SECTION STARTS----------------------------------------*/
.pagination a{
    color: var(--white);
    transition: color 0.4s;
}
.pagination ul{
    width: 15rem;
    margin: 2rem auto;
}
.pagination li{
    display: inline-block;
    cursor: pointer;
    background-color: var(--theme);
    padding: 1rem;
    margin: 0 0.2rem;
    border-radius: 50%;
    transition: background-color 0.4s;
    box-shadow: 0 0 22px rgba(0, 0, 0, 0.3);
}
.pagination li:hover,
#goUp:hover{
    background-color: var(--light);
}
.pagination li:hover a,
#goUp:hover a{
    color: var(--theme);
}
/*--------------------------PAGINATION SECTION STARTS----------------------------------------*/


/*--------------------------MEDIA QUERIES TABLET----------------------------------------*/
@media screen and (min-width:720px) {
    main{
        width: 95%;
        margin: auto;
    }
    section{
        padding-left: 1rem;
        padding-right: 1rem;
    }
    #headerNav{
        height: 3.5rem;
    }
    #banner .imgContainer{
        height: 55vh;
    }
    #banner .imgContainer img{
        height: 55vh;
    }
    #banner .content{
        padding: 1rem;
    }
    #banner .content p{
        display: block;
    }
    .popular .cardsContainer{
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-gap: 1rem;
    }
    .popular .big{
        grid-column: 1/3;
        position: relative;
    }
    .popular .big .cardImg{
        height: 82%
    }
    .big .content h5{
        font-size:2.2rem;
    }
    .subCategory .cardsContainer{
        grid-template-columns: 1fr 1fr 1fr 1fr;
    }
    .superCategory .cardsContainer{
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-gap: 1rem;
    }
    .superCategory .whole{
        grid-column: 1/3;
    }
    .whole a{
        display: grid;
        grid-template-columns: 1fr 1fr;
    }
    .whole .content{
        margin: auto;
    }
    footer{
        display: grid;
        grid-template-columns: 1fr 1fr;
    }
    footer div.copy{
        text-align: left;
        margin: 1rem;
    }

    .borders{
        border-top: 10rem solid var(--light);
        border-bottom: 5rem solid var(--light);
        padding: 4rem;
    }
    article.blog p{
        text-align: left;
    }
}
/* ... */

